@@ -2,7 +2,9 @@
 5.71  2014-12-30
   - Updated Net::DNS::Native requirement to 0.15 for some important bug fixes.
   - Updated jQuery to version 2.1.3.
+  - Improved Mojo::URL performance.
   - Fixed fragment and userinfo normalization bugs in Mojo::URL.
+  - Fixed query charset bug in Mojo::URL.
 
 5.70  2014-12-18
   - Improved Mojo::Template performance.
